<resources>
    <string name="app_name">MAD Project</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="ForgotPassword">ForgotPassword</string>
    <string name="Login">Login</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="Student">Student</string>
    <string name="Teacher">Teacher</string>
    <string name="Donor">Donor</string>
    <string name="Submit">Submit</string>
    <string name="DName">Name</string>
    <string name="ContactNumber">ContactNumber</string>
    <string name="Donation">Donation</string>
    <string name="SchoolItems">School Items</string>
    <string name="Clothes">Clothes</string>
    <string name="Food">Food</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="DonatingItems">Donating Items</string>
    <string name="Profile">Profile</string>
    <string name="FreeTution">FreeTution</string>
    <string name="Donate">Donate</string>
    <string name="Home">Home</string>
    <string name="NeedItem">NeedItem</string>
    <string name="Update">Update</string>
    <string name="Delete">Delete</string>
</resources>